prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/hex_numbers_expected.nut
// EXPECT_ERROR: "hexadecimal number expected"
let x = "\xZZ"
